hphp/hack/test/typecheck/inout/bad_inout_decl_byref2.php.exp
File "bad_inout_decl_byref2.php", line 3, characters 15-46:
Functions may not use both reference and inout parameters (Parsing[1002])
