hphp/hack/test/typecheck/inout/bad_inout_decl_byref2.php
<?hh

function test(inout int $x, bool $b, string &$s): void {}
